cmd/kubectl/testyaml/virtual-service.yaml
apiVersion: v1
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: default
spec:
  serviceRef: nginx-service
  port: 800
  subsets:
    - name: nginx-v1
      weight: 1
